# create-trash-app

./: Cargo.toml  README.md
src/: lib.rs  main.rs
template/: Cargo.toml  Dockerfile  pnpm-lock.yaml
template/assets/: custom.css  main.css
template/src/: main.rs
template/src/http/: mod.rs
template/templates/components/: content.html
template/templates/layouts/: base.html
template/templates/pages/: another_page.html  index.html
